Add multiple features and icon sets from pymdownx and footnotes

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,44 @@
 site_name: Data Structures
 site_url: https://msu-csc232-fa25.github.io/notes
+repo_name: msu-csc232-fa25/notes
+repo_url: https://github.com/msu-csc232-fa25/notes
 theme:
   name: material
+  icon:
+    admonition:
+      note: octicons/tag-16
+      abstract: octicons/checklist-16
+      info: octicons/info-16
+      tip: octicons/squirrel-16
+      success: octicons/check-16
+      question: octicons/question-16
+      warning: octicons/alert-16
+      failure: octicons/x-circle-16
+      danger: octicons/zap-16
+      bug: octicons/bug-16
+      example: octicons/beaker-16
+      quote: octicons/quote-16
+  features:
+    - content.code.copy
+extra:
+  generator: false
+  social:
+    - icon: fontawesome/brands/twitter
+      link: https://twitter.com/professordaehn
+      name: Professor Daehn on Twitter
+copyright: Copyright &copy; 2025 James R. Daehn
+markdown_extensions:
+  - admonition
+  - footnotes
+  - pymdownx.details
+  - pymdownx.superfences:
+      custom_fences:
+        - name: mermaid
+          class: mermaid
+          format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
